# mcproto

./: .gitignore  CMakeLists.txt
include/mcproto/common/: mcpacket.h  mctype.h  utils.h
include/mcproto/java/types/: basic_types.h  entity_metadata.h  identifier.h  position.h  string.h  vars.h
src/: main.cpp
src/mcproto/common/: utils.cpp
tests/: main.cpp  types.cpp
